[project]
name = "foundations-of-time-series-in-forestry-part-1-of-4"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
]
